[package]
name = "hello-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.1", features = [] }

# from: https://bevyengine.org/learn/quick-start/getting-started/setup/#dynamic-linking
# then: https://docs.rs/bevy/latest/bevy/dev_tools/struct.DevToolsPlugin.html
[features]
default = ["dev_mode"] # not a good practice if we were a reusable crate, seems okay for a game
dev_mode = ["bevy/dynamic_linking", "bevy/bevy_dev_tools"]

# from: https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
