[package]
name = "hello-bevy"
version = "0.1.0"
edition = "2021"

# from: https://doc.rust-lang.org/cargo/reference/features.html
# and: https://docs.rs/bevy/latest/bevy/index.html#cargo-features
[dependencies]
bevy = { version = "0.14.1", features = ["bevy_dynamic_plugin", "jpeg", "symphonia-all", "sysinfo_plugin", "webp"] }
bevy_dev_console = { git = "https://github.com/doonv/bevy_dev_console.git", version = "0.1.0" , optional = true}

# from: https://bevyengine.org/learn/quick-start/getting-started/setup/#dynamic-linking
# then: https://docs.rs/bevy/latest/bevy/dev_tools/struct.DevToolsPlugin.html
[features]
default = ["dev_mode", "wayland"] # not a good practice if we were a reusable crate, seems okay for a game
dev_mode = ["dep:bevy_dev_console", "bevy/dynamic_linking", "bevy/bevy_dev_tools", "bevy/file_watcher"]
# , "bevy/bevy_debug_stepping", "bevy/detailed_trace", "bevy/trace_tracy", "bevy/trace_tracy_memory"]
wayland = ["bevy/wayland"]

# from: https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
