[package]
name = "hello-bevy"
version = "0.1.0"
edition = "2021"

# from: https://doc.rust-lang.org/cargo/reference/features.html
# and: https://docs.rs/bevy/latest/bevy/index.html#cargo-features
[dependencies]
anyhow = "1.0.89"
bevy = { version = "*", features = ["bevy_dynamic_plugin", "jpeg", "symphonia-all", "sysinfo_plugin", "webp"] }
bevy-inspector-egui = { version = "*", features = ["bevy_render", "highlight_changes"], default-features = false, optional = true}
crossbeam-channel = "*"
derive_more = { version = "1.0.0", features = ["display", "error"] }
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.23", version = "0.23" }
gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.23", version = "0.23" }
gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.23", version = "0.23" }
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.23", version = "0.23" }
gst-utils = { package = "gstreamer-utils", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.23", version = "0.23" }
gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.23", version = "0.23" }
gst-plugin-audiofx = { git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs.git", tag = "0.13.2", version = "0.13.2" }
gst-plugin-closedcaption = { git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs.git", tag = "0.13.2", version = "0.13.2" }
gst-plugin-fallbackswitch = { git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs.git", tag = "0.13.2", version = "0.13.2" }
gst-plugin-livesync = { git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs.git", tag = "0.13.2", version = "0.13.2" }
gst-plugin-png = { git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs.git", tag = "0.13.2", version = "0.13.2" }
gst-plugin-togglerecord = { git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs.git", tag = "0.13.2", version = "0.13.2" }
xdg = "2.5.2"
ctrlc = "3.4.5"
# from: https://bevyengine.org/learn/quick-start/getting-started/setup/#dynamic-linking
# then: https://docs.rs/bevy/latest/bevy/dev_tools/struct.DevToolsPlugin.html
[features]
default = ["dev_mode", "wayland"] # not a good practice if we were a reusable crate, seems okay for a program
dev_mode = ["dep:bevy-inspector-egui", "bevy/dynamic_linking", "bevy/bevy_dev_tools", "bevy/file_watcher"]
# , "bevy/bevy_debug_stepping", "bevy/detailed_trace", "bevy/trace_tracy", "bevy/trace_tracy_memory"]
wayland = ["bevy/wayland"]

# from: https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
